--- a/src/App.css
+++ b/src/App.css
@@ -48,5 +48,7 @@
   0%   { background-position: 0% 50%; }
   100% { background-position: 200% 50%; }
 }
-
+.perspective-1000 {
+  perspective: 1000px;
+}
   
